# nfx-hashing

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_Hashing.cpp  CMakeLists.txt  README.md
cmake/: nfx-hashing-config.cmake.in  nfxHashingBuildConfig.cmake  nfxHashingDependencies.cmake  nfxHashingInstall.cmake  nfxHashingPackaging.cmake  nfxHashingSources.cmake
doc/: CMakeLists.txt
include/nfx/: Hashing.h
include/nfx/detail/hashing/: Algorithms.inl  Hash.inl  Hasher.inl
include/nfx/hashing/: Algorithms.h  Concepts.h  Constants.h  Hash.h  Hasher.h
samples/: CMakeLists.txt  Sample_AdvancedHashing.cpp  Sample_Hash.cpp  Sample_Hasher.cpp  Sample_LowLevelHashing.cpp
test/: CMakeLists.txt  TESTS_Hash.cpp  TESTS_HashAlgorithms.cpp  TESTS_HashQuality.cpp  TESTS_HasherFunctor.cpp
